--- a/src/Viewer/components/SearchPanel/SearchPanel.scss
+++ b/src/Viewer/components/SearchPanel/SearchPanel.scss
@@ -1,7 +1,18 @@
-.search-input-label {
-  display: block;
-  font-size: 0.753rem;
+.tab-search-header {
+  display: flex;
   padding: 10px 0;
+  align-items: center;
+}
+.tab-search-header-text {
+  flex-grow: 1;
+  font-size: 0.8rem;
+  user-select: none;
+}
+
+.tab-search-header-button {
+  color: #8c8c8c;
+  border: none;
+  background-color: transparent;
 }
 
 .search-input {
@@ -58,7 +69,9 @@
 }
 
 .search-results-page-header-page-num {
+  display: flex;
   flex-grow: 1;
+  align-items: center;
 }
 
 .search-results-page-header-result-count {
