--- a/src/Viewer/components/Monaco/MonacoInstance.scss
+++ b/src/Viewer/components/Monaco/MonacoInstance.scss
@@ -4,3 +4,9 @@
 // .monaco-editor-overlaymessage {
 //  display: none !important;
 // }
+
+.monaco-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
