Replace monaco-editor/react with our own wrapper; Remove unnecessary monaco components from the build. (#34)

--- a/src/Viewer/components/Monaco/MonacoInstance.scss
+++ b/src/Viewer/components/Monaco/MonacoInstance.scss
@@ -4,3 +4,8 @@
 // .monaco-editor-overlaymessage {
 //  display: none !important;
 // }
+
+.monaco-container {
+    width: 100%;
+    height: 100%;
+}
