Use `rem` for font size in DropFileContainer's hover message.

--- a/new-log-viewer/src/components/DropFileContainer/index.css
+++ b/new-log-viewer/src/components/DropFileContainer/index.css
@@ -24,7 +24,7 @@
 .hover-message {
     padding: 8px;
     color: #616161;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-family: Roboto, sans-serif;
     background-color: #f3f3f3;
     z-index: var(--drop-file-container-hover-message-z-index);
