--- a/new-log-viewer/src/components/DropFileContainer/index.css
+++ b/new-log-viewer/src/components/DropFileContainer/index.css
@@ -25,7 +25,7 @@
     padding: 8px;
     color: #616161;
     font-size: 0.875rem;
-    font-family: Roboto, sans-serif;
+    font-family: var(--ylv-ui-font-family), sans-serif;
     background-color: #f3f3f3;
     z-index: var(--ylv-drop-file-container-hover-message-z-index);
 }
