--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -10,7 +10,8 @@ html {
 
 :root {
     /* font-family globals */
-    --ylv-ui-font-family: -apple-system, BlinkMacSystemFont, system-ui, Ubuntu, "Droid Sans", Roboto;
+    --ylv-ui-font-family: -apple-system, BlinkMacSystemFont, system-ui, Ubuntu, "Droid Sans",
+    Roboto;
 
     /* z-index globals */
     /* .monaco-editor .minimap { z-index: 5; } */
