--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -3,3 +3,23 @@ html, body, #root {
     height: 100%;
     width: 100%;
 }
+
+html {
+    font-size: 16px;
+}
+
+:root {
+    /* font-family globals */
+    --ylv-ui-font-family: -apple-system, BlinkMacSystemFont, system-ui, Ubuntu, "Droid Sans",
+    Roboto;
+
+    /* z-index globals
+     *
+     * Other z-index values in the project for reference:
+     * ```
+     * .monaco-editor .minimap { z-index: 5; }
+     * ```
+     */
+    --ylv-drop-file-container-hover-mask-z-index: 10;
+    --ylv-drop-file-container-hover-message-z-index: 11;
+}
