Move CSS-in-JS to dedicated spreadsheet; rename .settings-modal -> .settings-dialog-title .

--- a/new-log-viewer/src/components/modals/SettingsModal/index.css
+++ b/new-log-viewer/src/components/modals/SettingsModal/index.css
@@ -1,8 +1,13 @@
-.settings-modal {
+.settings-dialog-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.settings-dialog-title-text {
+    flex-grow: 1;
+    font-size: 2rem;
 }
 
 .config-form-control {
