--- a/new-log-viewer/src/components/StatusBar/index.css
+++ b/new-log-viewer/src/components/StatusBar/index.css
@@ -1,4 +1,5 @@
 .status-bar {
+    box-shadow: 0 -1px 0 0 var(--joy-palette-neutral-outlinedBorder);
     align-items: center;
     bottom: 0;
     display: flex;
