--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -24,6 +24,7 @@ html {
      * .monaco-editor .minimap { z-index: 5; }
      * ```
      */
+    --ylv-menu-bar-z-index: 6;
     --ylv-drop-file-container-hover-mask-z-index: 10;
     --ylv-drop-file-container-hover-message-z-index: 11;
 }
