Introduce 8px padding to .menu-bar for better spacing. Add .menu-bar-filename class to CSS.

--- a/new-log-viewer/src/components/MenuBar/index.css
+++ b/new-log-viewer/src/components/MenuBar/index.css
@@ -1,8 +1,14 @@
 .menu-bar {
+    padding-left: 8px;
     display: flex;
     flex-direction: row;
     height: var(--ylv-status-bar-height);
     align-items: center;
     box-shadow: 0 1px 0 0 var(--joy-palette-neutral-outlinedBorder);
     z-index: var(--ylv-menu-bar-z-index);
+}
+
+.menu-bar-filename {
+    align-items: center;
+    flex-grow: 1;
 }
