Refactor panel resize behaviour.

--- a/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
+++ b/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
@@ -1,6 +1,7 @@
 .sidebar-tabs {
     height: 100%;
     flex-grow: 1;
+    width: calc(100% - var(--ylv-panel-resize-handle-width));
 }
 
 .sidebar-tab-list-spacing {
