--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -16,6 +16,7 @@ html {
     /* size globals */
     --ylv-status-bar-height: 32px;
     --ylv-menu-bar-height: 32px;
+    --ylv-panel-resize-handle-width: 3px;
 
     /* z-index globals
      *
@@ -24,6 +25,7 @@ html {
      * .monaco-editor .minimap { z-index: 5; }
      * ```
      */
+    --ylv-resize-handle-z-index: 1;
     --ylv-menu-bar-z-index: 6;
     --ylv-drop-file-container-hover-mask-z-index: 10;
     --ylv-drop-file-container-hover-message-z-index: 11;
