--- a/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
+++ b/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
@@ -1,7 +1,14 @@
 .sidebar-tabs {
-    height: 100%;
     flex-grow: 1;
     width: calc(100% - var(--ylv-panel-resize-handle-width));
+    height: 100%;
+}
+
+.sidebar-tab-button {
+    justify-content: center !important;
+    width: 50px;
+    height: 50px;
+    padding: 0 !important;
 }
 
 .sidebar-tab-list-spacing {
