--- a/new-log-viewer/src/components/MenuBar/index.css
+++ b/new-log-viewer/src/components/MenuBar/index.css
@@ -7,6 +7,7 @@
 
     height: var(--ylv-status-bar-height);
 
+    /* stylelint-disable-next-line custom-property-pattern */
     box-shadow: 0 1px 0 0 var(--joy-palette-neutral-outlinedBorder);
 }
 
