--- a/new-log-viewer/src/components/StatusBar/index.css
+++ b/new-log-viewer/src/components/StatusBar/index.css
@@ -7,6 +7,7 @@
 
     width: 100%;
 
+    /* stylelint-disable-next-line custom-property-pattern */
     box-shadow: 0 -1px 0 0 var(--joy-palette-neutral-outlinedBorder);
 }
 
