--- a/new-log-viewer/src/components/MenuBar/index.css
+++ b/new-log-viewer/src/components/MenuBar/index.css
@@ -11,14 +11,18 @@
     box-shadow: 0 1px 0 0 var(--joy-palette-neutral-outlinedBorder);
 }
 
-.menu-bar-logo {
-    user-select: none;
-    width: 64px;
-    font-size: 1.1rem;
-    text-align: center;
+.menu-bar-logo-container {
+    display: flex;
+    justify-content: center;
+    width: 48px;
+    height: var(--ylv-status-bar-height);
+}
+
+.menu-bar-open-file-icon {
+    font-size: 24px !important;
 }
 
 .menu-bar-filename {
     flex-grow: 1;
-    align-items: center;
+    padding-left: 10px;
 }
