--- a/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
+++ b/new-log-viewer/src/components/SidebarContainer/PanelTabs/index.css
@@ -6,9 +6,13 @@
 
 .sidebar-tab-button {
     justify-content: center !important;
-    width: 64px;
-    height: 64px;
+    width: 48px;
+    height: 48px;
     padding: 0 !important;
+}
+
+.sidebar-tab-button-icon {
+    font-size: 32px !important;
 }
 
 .sidebar-tab-list-spacing {
