--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -29,6 +29,7 @@ html {
      */
     --ylv-resize-handle-z-index: 1;
     --ylv-menu-bar-z-index: 6;
+    --ylv-status-bar-z-index: 6;
     --ylv-drop-file-container-hover-mask-z-index: 10;
     --ylv-drop-file-container-hover-message-z-index: 11;
 }
