Replace inline style with a CSS class for the dummy MenuItem.

--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
@@ -6,3 +6,7 @@
 .log-level-select-render-value-box-label {
     background-color: initial !important;
 }
+
+.log-level-select-dummy-option {
+    display: none !important;
+}
