Switch font from Roboto to Inter.

--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -13,7 +13,7 @@ html {
 :root {
     /* font-family globals */
     --ylv-ui-font-family: -apple-system, "BlinkMacSystemFont", system-ui, "Ubuntu", "Droid Sans",
-        "Roboto";
+        "Inter";
 
     /* size globals */
     --ylv-status-bar-height: 32px;
