Add visual feedback on Sidebar resize handle mouse down.

--- a/new-log-viewer/src/components/CentralContainer/Sidebar/ResizeHandle.css
+++ b/new-log-viewer/src/components/CentralContainer/Sidebar/ResizeHandle.css
@@ -13,6 +13,7 @@
     border-right: 1px solid var(--joy-palette-neutral-outlinedBorder, #cdd7e1);
 }
 
+.resize-handle-holding,
 .resize-handle:hover {
     box-sizing: initial;
 
