--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
@@ -7,6 +7,10 @@
     background-color: initial !important;
 }
 
+.log-level-select-listbox {
+    max-width: 100px;
+}
+
 .log-level-select-dummy-option {
     display: none !important;
 }
