Set max-width directly to 0 to prevent auto-resizing with the Select button; add docs.

--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
@@ -8,7 +8,8 @@
 }
 
 .log-level-select-listbox {
-    max-width: 100px;
+    /* Disallow width auto-resizing with the Select button. */
+    max-width: 0;
 }
 
 .log-level-select-dummy-option {
