--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/LogLevelChip.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/LogLevelChip.css
@@ -1,7 +1,8 @@
 .log-level-chip {
     /* stylelint-disable-next-line custom-property-pattern */
     --Chip-radius: 0;
+}
 
-    font-family: "Roboto Mono", monospace !important;
-    font-weight: 600 !important;
+.log-level-chip span {
+    width: 1.4ch;
 }
