Docs & Reformat - Apply suggestions from code review
Co-authored-by: kirkrodrigues <2454684+kirkrodrigues@users.noreply.github.com>

--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
@@ -1,6 +1,6 @@
 .log-level-select {
     /* JoyUI has a rounding issue when calculating the listbox position, causing it to misjudge if
-      the  listbox will fit on the right side. To mitigate this, shift the select box 1px to the
+      the listbox will fit on the right side. To mitigate this, we shift the select box 1px to the
       left. */
     margin-right: 1px;
 }
@@ -11,10 +11,11 @@
 }
 
 .log-level-select-render-value-box-label {
+    /* Disable `Chip`'s background style. */
     background-color: initial !important;
 }
 
 .log-level-select-listbox {
-    /* Disallow width auto-resizing with the Select button. */
+    /* Disallow width auto-resizing with the `Select` button. */
     max-width: 0;
 }
