Add load state for UI components.

--- a/new-log-viewer/src/components/DropFileContainer/index.css
+++ b/new-log-viewer/src/components/DropFileContainer/index.css
@@ -22,6 +22,11 @@
     background-color: rgb(2 88 168 / 20%);
 }
 
+.hover-mask-loading {
+    cursor: progress;
+    background-color: rgba(168, 2, 2, 0.2);
+}
+
 .hover-message {
     z-index: var(--ylv-drop-file-container-hover-message-z-index);
 
