Refactor loading progress styles in MenuBar component.

--- a/new-log-viewer/src/components/MenuBar/index.css
+++ b/new-log-viewer/src/components/MenuBar/index.css
@@ -26,3 +26,13 @@
     flex-grow: 1;
     padding-left: 10px;
 }
+
+.menu-bar-loading-progress {
+    /* stylelint-disable-next-line custom-property-pattern */
+    --LinearProgress-thickness: 2px !important;
+    /* stylelint-disable-next-line custom-property-pattern */
+    --LinearProgress-progressThickness: 2px !important;
+
+    z-index: var(--ylv-loading-progress-z-index);
+    margin-bottom: -2px;
+}
