add grid so states can be seen in code. Docs better in code

--- a/new-log-viewer/src/components/MenuBar/PageNumInput.css
+++ b/new-log-viewer/src/components/MenuBar/PageNumInput.css
@@ -7,3 +7,7 @@
 .page-num-input-num-pages-text {
     font-size: inherit !important;
 }
+
+.page-num-input-num-pages-text-disabled {
+    color: "neutral.plainDisabledColor";
+}
