--- a/new-log-viewer/src/components/MenuBar/PageNumInput.css
+++ b/new-log-viewer/src/components/MenuBar/PageNumInput.css
@@ -8,6 +8,7 @@
     font-size: inherit !important;
 }
 
+/* stylelint-disable-next-line custom-property-pattern */
 .page-num-input-num-pages-text-disabled {
-    color: "neutral.plainDisabledColor";
+    color: var(--joy-palette-neutral-plainDisabledColor) !important;
 }
