--- a/new-log-viewer/src/components/Popups/index.css
+++ b/new-log-viewer/src/components/Popups/index.css
@@ -1,15 +1,27 @@
 .pop-up-messages-container-snackbar {
+    /* Disable pointer events on the transparent container to allow components underneath to be
+      accessed. */
+    pointer-events: none;
+
     right: 14px !important;
     bottom: var(--ylv-status-bar-height) !important;
 
-    padding: 10px !important;
+    padding: 0 !important;
 
     background: transparent !important;
     border: none !important;
     box-shadow: none !important;
 }
 
+.pop-up-messages-container-stack {
+    overflow-y: auto;
+    height: calc(100vh - var(--ylv-status-bar-height) - var(--ylv-menu-bar-height));
+}
+
 .pop-up-message-box-alert {
+    /* Restore pointer events on the pou-up messages. See above `pointer-events: none` in
+      `.pop-up-messages-container-snackbar`. */
+    pointer-events: initial;
     padding-inline: 18px !important;
 }
 
