--- a/new-log-viewer/src/components/Popups/index.css
+++ b/new-log-viewer/src/components/Popups/index.css
@@ -14,6 +14,7 @@
 }
 
 .pop-up-messages-container-stack {
+    scrollbar-width: none;
     overflow-y: auto;
     height: calc(100vh - var(--ylv-status-bar-height) - var(--ylv-menu-bar-height));
 }
