junhao disable pointer request

--- a/new-log-viewer/src/index.css
+++ b/new-log-viewer/src/index.css
@@ -34,3 +34,7 @@ html {
     --ylv-drop-file-container-hover-mask-z-index: 10;
     --ylv-drop-file-container-hover-message-z-index: 11;
 }
+
+.disable-pointer-events {
+    pointer-events: none !important;
+}
