new-log-viewer: Disable pointer events for log level tooltips to prevent underlying checkbox from being blocked (fixes #90). (#91)

--- a/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
+++ b/new-log-viewer/src/components/StatusBar/LogLevelSelect/index.css
@@ -19,3 +19,9 @@
     /* Disallow width auto-resizing with the `Select` button. */
     max-width: 0;
 }
+
+.log-level-select-option-text-tooltip {
+    /* Disable pointer events to prevent tooltips from blocking interaction with underlying
+      elements. */
+    pointer-events: none;
+}
