Add load state in <StateContextProvider/> and disable UI elements based on the state. (#88)
Co-authored-by: davemarco <83603688+davemarco@users.noreply.github.com>

--- a/new-log-viewer/src/components/MenuBar/PageNumInput.css
+++ b/new-log-viewer/src/components/MenuBar/PageNumInput.css
@@ -13,3 +13,8 @@
 .page-num-input-num-pages-text {
     font-size: inherit !important;
 }
+
+.page-num-input-num-pages-text-disabled {
+    /* stylelint-disable-next-line custom-property-pattern */
+    color: var(--joy-palette-neutral-plainDisabledColor) !important;
+}
