new-log-viewer: Fix filename wrapping and overflow in menubar for filenames with hyphens on narrow windows.

--- a/new-log-viewer/src/components/MenuBar/index.css
+++ b/new-log-viewer/src/components/MenuBar/index.css
@@ -26,7 +26,10 @@
     overflow-x: hidden;
     display: flex;
     flex-grow: 1;
+
     padding-inline: 0.75rem !important;
+
+    white-space: nowrap;
 }
 
 .menu-bar-filename-left-split {
