--- a/src/components/CentralContainer/Sidebar/SidebarTabs/CustomTabPanel.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/CustomTabPanel.css
@@ -2,6 +2,12 @@
     padding: 0.75rem;
 }
 
+.custom-tab-panel-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .sidebar-tab-panel-title-container {
     user-select: none;
     margin-bottom: 0.5rem !important;
