--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/Result.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/Result.css
@@ -1,28 +1,16 @@
 .result-button {
     user-select: none;
 
-    overflow: hidden;
-    display: flex !important;
+    overflow-x: hidden;
 
+    width: 100%;
+    padding: 0 0 0 12px !important;
+
+    text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.result-text {
-    display: inline !important;
-    font-size: 0.875rem !important;
-    font-weight: 400 !important;
-}
-
-.before-match,
-.after-match {
-    overflow: hidden;
-    flex: 1 1 0; /* Allow each item to take an equal part */
-    text-overflow: ellipsis;
-}
-
-.match {
-    overflow: hidden;
-    flex: initial;
-    text-overflow: ellipsis;
+.result-button-text {
+    font-family: Inter, sans-serif !important;
 }
