--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
@@ -1,6 +1,14 @@
+.search-tab-container {
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .query-input-box {
     z-index: var(--ylv-panel-query-input-z-index);
     flex-direction: row !important;
+    border-radius: 0;
 }
 
 .query-option-button {
@@ -14,4 +22,9 @@
 .query-input-box-end-decorator {
     display: block !important;
     margin-block-start: 0 !important;
+}
+
+.accordion-group {
+    overflow-y: auto;
+    flex-grow: 1;
 }
