--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/Result.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/Result.css
@@ -4,11 +4,15 @@
     overflow-x: hidden;
 
     width: 100%;
-    padding: 0 0 0 12px !important;
+    padding-left: 12px;
 
     text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.result-button:hover {
+    cursor: default;
 }
 
 .result-button-text {
