--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
@@ -5,6 +5,12 @@
     height: 100%;
 }
 
+.query-input-box-with-progress {
+    /* JoyUI has a rounding issue when calculating the Textarea width, causing it to overflow its
+      container. */
+    margin-right: 1px;
+}
+
 .query-input-box {
     z-index: var(--ylv-panel-query-input-z-index);
     flex-direction: row !important;
@@ -22,6 +28,11 @@
 .query-input-box-end-decorator {
     display: block !important;
     margin-block-start: 0 !important;
+}
+
+.query-input-box-linear-progress {
+    /* stylelint-disable-next-line custom-property-pattern */
+    --LinearProgress-radius: 0 !important;
 }
 
 .query-results {
