feat(query): Add a "Search" tab in the Sidebar for wildcard queries. (#107)

--- a/src/components/CentralContainer/Sidebar/SidebarTabs/CustomTabPanel.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/CustomTabPanel.css
@@ -2,12 +2,19 @@
     padding: 0.75rem;
 }
 
+.sidebar-tab-panel-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .sidebar-tab-panel-title-container {
     user-select: none;
     margin-bottom: 0.5rem !important;
 }
 
 .sidebar-tab-panel-title {
+    flex-grow: 1;
     font-size: 0.875rem !important;
     font-weight: 400 !important;
     text-transform: uppercase;
