Change the CSS property `overflow-y` to `overflow` in class `.sidebar-tabs`.

--- a/src/components/CentralContainer/Sidebar/SidebarTabs/index.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/index.css
@@ -1,5 +1,5 @@
 .sidebar-tabs {
-    overflow-y: hidden;
+    overflow: hidden;
     flex-grow: 1;
     width: calc(100% - var(--ylv-panel-resize-handle-width));
     height: calc(100vh - var(--ylv-menu-bar-height) - var(--ylv-status-bar-height));
