refactor(settings): Turn the theme toggle into a theme override field in the settings form.

--- a/src/components/modals/SettingsModal/index.css
+++ b/src/components/modals/SettingsModal/index.css
@@ -3,11 +3,8 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
 
-.settings-dialog-title-text {
-    flex-grow: 1;
-    font-size: 2rem;
+    font-size: 2rem !important;
 }
 
 .config-form-control {
