--- a/src/components/MenuBar/index.css
+++ b/src/components/MenuBar/index.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
 
-    height: var(--ylv-status-bar-height);
+    height: var(--ylv-menu-bar-height);
 
     /* stylelint-disable-next-line custom-property-pattern */
     box-shadow: 0 1px 0 0 var(--joy-palette-neutral-outlinedBorder);
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     min-width: 48px;
-    height: var(--ylv-status-bar-height);
+    height: var(--ylv-menu-bar-height);
 }
 
 .menu-bar-open-file-icon {
