--- a/src/main.css
+++ b/src/main.css
@@ -12,10 +12,11 @@ html {
 
 :root {
     /* font-family globals */
-    --ylv-ui-font-family: -apple-system, "BlinkMacSystemFont", system-ui, "Ubuntu", "Droid Sans",
-        "Inter";
-    --ylv-ui-mono-font-family: "SF Mono", monaco, menlo, "Ubuntu Mono", "Liberation Mono",
-        "DejaVu Sans Mono", "Roboto Mono";
+    --ylv-ui-font-family:
+        -apple-system, "BlinkMacSystemFont", system-ui, "Ubuntu", "Droid Sans", "Inter";
+    --ylv-ui-mono-font-family:
+        "SF Mono", monaco, menlo, "Ubuntu Mono", "Liberation Mono", "DejaVu Sans Mono",
+        "Roboto Mono";
 
     /* size globals */
     --ylv-status-bar-height: 32px;
