--- a/src/components/MenuBar/TimestampQueryBox.css
+++ b/src/components/MenuBar/TimestampQueryBox.css
@@ -1,15 +1,3 @@
-:root {
-    --input-bg: #fff;
-    --input-color: #222;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --input-bg: #222;
-        --input-color: #fff;
-    }
-}
-
 .timestamp-query-box {
     display: flex;
     flex-direction: row;
@@ -22,8 +10,15 @@
     border: none;
 
     font: inherit;
-    color: var(--input-color);
     text-align: center;
+}
 
-    background-color: var(--input-bg);
+.timestamp-query-box-input.light {
+    color: #222;
+    background-color: #fff;
+}
+
+.timestamp-query-box-input.dark {
+    color: #fff;
+    background-color: #222;
 }
