feat: Add KQL filtering support.

--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/QueryInputBox.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/QueryInputBox.css
@@ -1,4 +1,6 @@
 .query-input-box-with-progress {
+    width: 100%;
+
     /* JoyUI has a rounding issue when calculating the Textarea width, causing it to overflow its
       container. */
     margin-right: 1px;
