--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/QueryInputBox.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/QueryInputBox.css
@@ -1,12 +1,3 @@
-.query-input-box-with-progress {
-    width: 100%;
-}
-
-.query-input-box {
-    flex-direction: row !important;
-    border-radius: 0 !important;
-}
-
 .query-option-button {
     width: 1.5rem !important;
     min-width: 0 !important;
@@ -18,11 +9,7 @@
 
 .query-input-box-textarea {
     width: 0;
-}
-
-.query-input-box-end-decorator {
-    display: block !important;
-    margin-block-start: 0 !important;
+    font-family: monospace !important;
 }
 
 .query-input-box-linear-progress {
